Improved logging on lookup failures